Added search bar to products

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -13,13 +13,14 @@
     background-color: #EEEEEE;
 }
 
-.product-row{
+.product-grid{
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit,minmax(290px,1fr));
     justify-content: center;
     align-content: center;
     background-color: white;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-top: 2rem;
+    padding: 2rem;
 }
 
 .product-card{
@@ -28,11 +29,11 @@
     width: auto;
     width: 13rem;
     flex:1;
-    max-width: 215px;
 }
 
 .product-col{
-    margin: auto 0.5rem 0.5rem 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     display: flex;
 
 }
